thay đổi params update supplỉer + finish doc supplier swagger
